--- a/TamuCareerCloset/README.rdoc
+++ b/TamuCareerCloset/README.rdoc
@@ -12,8 +12,13 @@ Things you may want to cover:
 * Configuration
 
 * Database creation
+This app utilizes a postgresql database. Makesure you have this installed on your system before trying to run and test the app.
 
 * Database initialization
+
+Utilizes postgresql database at standard location when installing with homebrew. Login credentials should be specific to your computer (Your user name on your computer). This must be changed in the database.yml file located in the config folder. Once that is changed, enter this command in terminal to start up your database before trying to start the local rails server.
+
+postgres -D /usr/local/var/postgres
 
 * How to run the test suite
 
